--- a/mistralai_test.ipynb
+++ b/mistralai_test.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,17 +29,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.0062105655670166016,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Loading checkpoint shards",
+       "rate": null,
+       "total": 19,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e8d8c1a45faa45a7884559a93d24e9e8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/19 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Loading PEFT model\n",
-    "PEFT_MODEL_NBERT = \"adapter_nbertagnolli/checkpoint-660\"\n",
-    "PEFT_MODEL_FINAL = \"adatper_mentalllama/checkpoint-960\"\n",
-    "PEFT_MODEL_DREADDIT = \"adapter_mentalLLama_dreaddit/chackpoint-1120\"\n",
-    "PEFT_MODEL_DR = \"adapter_mentalLLama_DR/chatpoint-320\"\n",
     "\n",
-    "config = PeftConfig.from_pretrained(PEFT_MODEL_NBERT)\n",
+    "config = PeftConfig.from_pretrained(PEFT_MODEL_LIST[0])\n",
     "\n",
     "bnb_config = BitsAndBytesConfig(\n",
     "    load_in_4bit= True,\n",
@@ -56,16 +84,26 @@
     "    trust_remote_code=True,\n",
     ")\n",
     "\n",
-    "model = PeftModel.from_pretrained(peft_base_model, PEFT_MODEL_NBERT)\n",
-    "model.add_adapter(PEFT_MODEL_FINAL, peft_config=config)\n",
-    "model.add_adapter(PEFT_MODEL_DREADDIT, peft_config=config)\n",
-    "model.add_adapter(PEFT_MODEL_DR, peft_config=config)\n",
-    "model = model.merge_and_unload()\n",
-    "\n",
     "# Load tokenizer\n",
     "tokenizer = AutoTokenizer.from_pretrained(config.base_model_name_or_path, trust_remote_code=True)\n",
     "tokenizer.pad_token = tokenizer.eos_token\n",
     "tokenizer.padding_side = \"right\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PEFT_MODEL_LIST = [\"adapter_nbertagnolli/checkpoint-660\",\n",
+    "                   \"adapter_mentalLLama_Final/checkpoint-960\",\n",
+    "                   \"adapter_mentalLLama_dreaddit/checkpoint-1120\",\n",
+    "                   \"adapter_mentalLLama_DR/checkpoint-320\"]\n",
+    "model = peft_base_model\n",
+    "for i in range(len(PEFT_MODEL_LIST)):\n",
+    "    model = PeftModel.from_pretrained(model, PEFT_MODEL_LIST[i])\n",
+    "    model = model.merge_and_unload()"
    ]
   },
   {
